<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Factura">

    <ImageButton
        android:id="@+id/btnSushi3"
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="btnSushi3"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/sushi" />

    <TextView
        android:id="@+id/tvTitulo7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/tvTitulo7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSushi3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNIT8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/tvNIT8"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSushi3"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo7" />

    <TextView
        android:id="@+id/tvidFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/tvidFact"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSushi3" />

    <TextView
        android:id="@+id/tvCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/tvCliente"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvidFact" />

    <TextView
        android:id="@+id/tvFechaF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/tvfechaF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCliente" />

    <EditText
        android:id="@+id/txtPedido"
        android:layout_width="341dp"
        android:layout_height="302dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/nunito_extralight"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaF" />

    <TextView
        android:id="@+id/tvtToatal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/tvtToatal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPedido" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/tvTotal"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvtToatal"
        app:layout_constraintTop_toBottomOf="@+id/txtPedido" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/nunito_extralight"
        android:onClick="btnVolver4"
        android:text="@string/btnVolver"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal" />

</androidx.constraintlayout.widget.ConstraintLayout>