<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnSushi"
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="btnSushi"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/sushi" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toEndOf="@+id/btnSushi"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNIT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/tvNIT"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSushi"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <Button
        android:id="@+id/btnOrdenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/nunito_extralight"
        android:onClick="btnOrdenar"
        android:text="@string/btnOrdenar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNIT" />

</androidx.constraintlayout.widget.ConstraintLayout>